--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -1056,7 +1056,40 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
 
 
 
+@helper VerticalTabs(IEnumerable<string> tabnames, IEnumerable<string> contents, string containerCss = null, string tabColCss = null, string contentColCss = null)
+{
+containerCss = containerCss ?? "col-xs-12";
+tabColCss = tabColCss ?? "col-lg-2 col-md-2 col-sm-2 col-xs-3";
+contentColCss = contentColCss ?? "col-lg-10 col-md-10 col-sm-10 col-xs-9";
+bool first = true;
+    <div class="@containerCss verticaltab-container">
+            <div class="@tabColCss verticaltab-menu">
+                <div class="list-group">
+                    @foreach (var s in tabnames)
+                    {
+                        <a href="#" class="list-group-item @(first ? "active" : "")">
+                            @Html.Raw(s)
+                        </a>
 
+                        first = false;
+                    }
+                </div>
+            </div>
+            <div class="@contentColCss verticaltab">
+                @{
+                    first = true;
+                }
+                @foreach (var s in contents)
+                {
+                    <div class="verticaltab-content @(first ? "active" : "")">
+                        @Html.Raw(s)
+                    </div>
+                    first = false;
+                }
+            </div>
+            
+        </div>
+}
 
 
 @helper XContent(string content, bool raw = false)
