--- a/Web.Statu/Content/GlobalSite.css
+++ b/Web.Statu/Content/GlobalSite.css
@@ -1319,3 +1319,118 @@ textarea {
         -o-animation: rotatingFull 1s linear infinite;
         animation: rotatingFull 1s linear infinite;
     }
+
+.low-box {
+    max-height: 120px;
+    overflow: hidden;
+}
+
+    .low-box .line {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        margin: 0;
+        padding: 28px 0 8px 0;
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0+0,1+55 */
+        background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 55%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 55%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 55%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+    }
+
+
+        .low-box .line .more {
+            padding: 5px 10px;
+            color: #3e6deb;
+            text-decoration: none;
+            vertical-align: middle;
+        }
+
+            .low-box .line .more:before {
+                content: "\A0\A0\25BD\A0\A0více"; /*▽*/
+            }
+
+
+
+/*  vertical tab */
+div.verticaltab-container {
+    z-index: 10;
+    background-color: #ffffff;
+    padding: 0 !important;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    margin-top: 20px;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    -moz-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    background-clip: padding-box;
+    /*opacity: 0.97;
+    filter: alpha(opacity=97);
+    border: 1px solid #ddd;
+    margin-left: 50px;*/
+}
+
+div.verticaltab-container {
+}
+
+    div.verticaltab-container div.verticaltab-menu {
+        padding-right: 0;
+        padding-left: 0;
+        padding-bottom: 0;
+    }
+
+        div.verticaltab-container div.verticaltab-menu div.list-group {
+            margin-bottom: 0;
+        }
+
+            div.verticaltab-container div.verticaltab-menu div.list-group > a {
+                margin-bottom: 0;
+                background-color: #fbfbfb;
+                border-right: none;
+                border-left: none;
+                right: -1px;
+                box-shadow: inset -8px 0 7px -7px hsla(0,0%,0%,.25);
+            }
+
+                div.verticaltab-container div.verticaltab-menu div.list-group > a .glyphicon,
+                div.verticaltab-container div.verticaltab-menu div.list-group > a .fa {
+                    color: #818C99;
+                }
+
+                div.verticaltab-container div.verticaltab-menu div.list-group > a:first-child {
+                    border-top-right-radius: 0;
+                    -moz-border-top-right-radius: 0;
+                }
+
+                div.verticaltab-container div.verticaltab-menu div.list-group > a:last-child {
+                    border-bottom-right-radius: 0;
+                    -moz-border-bottom-right-radius: 0;
+                }
+
+                div.verticaltab-container div.verticaltab-menu div.list-group > a.active,
+                div.verticaltab-container div.verticaltab-menu div.list-group > a.active .glyphicon,
+                div.verticaltab-container div.verticaltab-menu div.list-group > a.active .fa {
+                    background-color: #fff;
+                    border-color: #fff;
+                    background-image: none;
+                    color: #000;
+                    border-right: none;
+                    box-shadow: none;
+                }
+
+    div.verticaltab-container div.verticaltab-content {
+        background-color: #ffffff;
+        /* border: 1px solid #eeeeee; */
+        padding-left: 20px;
+        padding-top: 10px;
+        padding-bottom: 20px;
+    }
+
+    div.verticaltab-container div.verticaltab {
+        border-left: 1px solid #ddd;
+    }
+
+        div.verticaltab-container div.verticaltab div.verticaltab-content:not(.active) {
+            display: none;
+        }
